# aevo-rust-sdk

./: .gitignore  Cargo.toml  PROGRESS.md  README.md
aevo-codegen/: Cargo.toml
aevo-codegen/src/: codegen.rs  downloader.rs  lib.rs  main.rs  names.rs  openapi.rs  parser.rs  wsgen.rs
aevo-sdk/: Cargo.toml
aevo-sdk/src/: endpoints.rs  error.rs  http.rs  lib.rs  models.rs
aevo-sdk/src/ws/: messages.rs  mod.rs
specs/: .manifest.json  docs.md  llms.txt
specs/changelog/: release-v1110.md  release-v117.md  release-v118.md  release-v119.md  v116.md
specs/reference/: aevo-mcp-privacy-policy.md  aevo-mcp.md  cancel-on-disconnect.md  deleteapikey.md  deleteordersall.md  deleteordersorderid.md  deletequotes.md  deletequotesquoteid.md  deleterfqs.md  deleterfqsblockid.md  deletesigningkey.md  deletetwapordersorderid.md  errors.md  getaccount.md  getaccountaccumulatedfundings.md  getaccountcancelondisconnect.md  getaccountemailaddress.md  getaccountemailpreferences.md  getaccountemailverified.md  getaccountstats.md  getaccounttradescsv.md  getaccounttransactionscsv.md  getaccountweeklyvolume.md  getairdropincentivizedassets.md  getapikey.md  getassets.md  getauth.md  getcheckreferral.md  getcoingeckostatistics.md  getemissions.md  getexpiries.md  getfarmboost.md  getfunding.md  getfundinghistory.md  getindex.md  getindexhistory.md  getinstrumentinstrumentname.md  getinstrumentinstrumentnametradehistory.md  getleaderboardcampaign.md  getmarkets.md  (+83 more)
