[workspace]
resolver = "2"
members = [
    "aevo-codegen",
    "aevo-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aevoxyz/aevo-rust-sdk"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
